--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -86,3 +86,47 @@ body {
 .small-image {
     width: 200px;
 }
+
+input[type=number] {
+    width: 45px;
+    padding: 5px;
+}
+
+.food-item-box input[type=submit] {
+    width: 100px;
+    height: 30px;
+    background-color: green;
+    border: none;
+    color: white;
+    padding: 5px;
+    text-decoration: none;
+    margin-left: 35px;
+    cursor: pointer;
+}
+
+.cart-item-container {
+    height: 80px;
+}
+
+.cart-img {
+    height: 60px;
+    float: left;
+    border: 1px solid black;
+    margin: 5px 50px 10px 0px;
+}
+
+.cart-text {
+    margin: 0 0 10px;
+}
+
+.cart-item-container input[type=submit] {
+    width: 140px;
+    height: 35px;
+    background-color: green;
+    border: none;
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+    margin: 0 3px;
+    cursor: pointer;
+}
