--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -130,3 +130,31 @@ input[type=number] {
     margin: 0 3px;
     cursor: pointer;
 }
+
+.order-container {
+    width: 600px;
+    text-align: center;
+}
+
+.order-container input {
+    width: 600px;
+    padding: 5px 0;
+    margin: 15px 0;
+}
+
+.order-container input[type=submit] {
+    width: 150px;
+    background-color: green;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.slider-container {
+    max-width: 600px;
+    position: relative;
+    margin: auto;
+}
